--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,7 @@
 [parser]
 is_proxy = True
+max-concurence = 10
+base-path = data
 
 [headers]
 Accept = text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7
