--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,7 @@ classifiers = [
 dependencies = [
     "aiohttp==3.8.*",
     "beautifulsoup4==4.12.*",
-    "Celery==5.2.*",
-    "redis==4.5.*"
+    "PyYaml==6.*"
 ]
 [project.optional-dependencies]
 dev = [
