Add all functionality, refactor

--- a/config.ini
+++ b/config.ini
@@ -2,8 +2,8 @@
 base-path = data
 
 [parser]
-is_proxy = True
-max-concurence = 5
+is_proxy = False
+max-concurence = 8
 
 [formatter]
 is_remove_additional_files = True
