Add readme and little config changes

--- a/config.ini
+++ b/config.ini
@@ -2,11 +2,11 @@
 base-path = data
 
 [parser]
-is_proxy = False
+is-proxy = False
 max-concurence = 8
 
 [formatter]
-is_remove_additional_files = True
+is-remove-additional-files = True
 
 [headers]
 Accept = text/html,application/xhtml+xml,application/xml;q=0.9,image/avif,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.7
