--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "markdownify==0.11.*"
 ]
 [project.optional-dependencies]
-dev = [
+proxy = [
     "free-proxy==1.1.1"
 ]
 test = [
