Better logger, better pages getter, bugfix

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -2,8 +2,9 @@
 base-path = data
 
 [parser]
-is-proxy = False
+is-proxy = True
 max-concurence = 8
+max-retries = 3
 
 [formatter]
 is-remove-additional-files = True
